# titiler-multidim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  package-lock.json  pyproject.toml
.github/actions/cdk-deploy/: action.yml
.github/workflows/: ci.yml  deploy-dev.yml
infrastructure/aws/: package-lock.json
infrastructure/aws/cdk/: app.py  config.py
infrastructure/aws/lambda/: Dockerfile  handler.py  otel-requirements.txt  otel_config.py
notebooks/: compare_xarray_representation.ipynb  test_native_icechunk.ipynb  test_virtual_icechunk.ipynb
scripts/: benchmark.py
src/titiler/multidim/: __init__.py  factory.py  main.py  map-form.html  map.html  middleware.py  reader.py  redis_pool.py  settings.py
src/titiler/xarray_api/: __init__.py  factory.py  main.py  map-form.html  reader.py  redis_pool.py
tests/: conftest.py  helpers.py  test_app.py  test_reader.py  test_reader_s3.py
tests/fixtures/: generate_test_icechunk.py  generate_test_icechunk_virtual.py  generate_test_netcdf.py  generate_test_pyramid.py  generate_test_zarr.py  generate_test_zarr_unconsolidated.py  generate_test_zarr_v3.py  testfile.nc
tests/fixtures/icechunk_native/chunks/: 06TV2NY13DRQ6SN7H4S0  084D3DXHBZPHCXBSM8R0  0B7WJA25XNND3543EEEG  0R8TFXC29YFQE6CJ4M60  0YP1X680VH28P35TT55G  1EF4ZPQF970BATKC1AXG  1JE2X686XHWCV6SKZ150  1VGWJFWG8G93KQ3A6Q20  32QN75ND8NGW1M34FR90  3H4849H3VAG84PHW97V0  3W2J6KNNYGTYP3X68R2G  3WZNT0YKQ4RDGTXRBXN0  42D1N71W5047Y3124M8G  45N5BRM55ZB999R1C43G  4D9TCRPK8DHCT78EER20  55HHPWFFAAEPFG1QK0R0  5EFY4N50W02ZD9KK93DG  5FRN1S5HYEEWCDWVMT60  6BHF9NP5EAG0EZKJW6BG  6DH98SACD3A71P6J2R20  6XASX1EZGAKJZG4XNSA0  73EF2XKQV5DSYBS8TXS0  74WVDS3GB6CBY1N3X3N0  7PPZ6SHFBWQ93BXN4KP0  7S1AFS35BF7EVP4HFYHG  85E4HRP25YGYZM6AARD0  89Z2CYTQ5B4Q0ZXGG93G  8BFT4QY7BFA0889PJAP0  8RB8JNQ9CJ7CK62KR05G  8YHBTHK80RZJ1YT4FR7G  92TPWHGRKV76BZ46BP1G  968ACEBQH79KBB5D3P2G  9D6SH5ATDS31DPWC1R5G  9PQ0RC06ET54YMV0G0J0  9WC81RWBGBWK8R5H0QY0  9Z2RCKAJ0N0P76688AEG  A56YAXFWR2Q8M4EZD0KG  A7MWFX1AS20AT1860MAG  AMPFRH7FM4JS7R5464R0  B2DHK2MPT12VR5WNEZH0  (+88 more)
tests/fixtures/icechunk_native/manifests/: 7RZJ0XB4DTQT7KJKSDZ0  7Z1GX6RCN8FYYA6QAQCG  8ADNNAHKZBZ8AWWDZ950  8Y2C766ZZ84DP99K80FG  9YJFSC9MPFV7R2ZNJ2P0  DA2BK1KS5MEN611YTKB0  V0HR8DHPN303QME8G6QG
tests/fixtures/icechunk_native/snapshots/: 1CECHNKREP0F1RSTCMT0  X7NF54E8W362EQT4PJDG
tests/fixtures/icechunk_native/transactions/: X7NF54E8W362EQT4PJDG
tests/fixtures/icechunk_virtual_accessible/: config.yaml
tests/fixtures/icechunk_virtual_accessible/chunks/: 3VM83JZ6YXVENDK42MJ0  NMGAQQ6SKTEA9C0TK5G0
tests/fixtures/icechunk_virtual_accessible/manifests/: 3DSZ7KZ1H0BEVXWDG8VG  721AFRGE2F44P08FT9D0  8MQRPJ3SNT82B2ZXX030  AHWC4FQJEVYQ5J65C54G  CYV4W4B50B3X873MJPBG  DTMA9ETG5ZV81D1XJWG0  ET239VNTQ8HSX1KFPQ30  GTYJKAT5YV7TQZTY6D1G  JP849E67Q9PYDPGVPPEG  M3FEWMD68JVFZ83VVN4G  N8YD2MV2C4AY75KRX0C0  RPNYSDFXG5C8HK9XX200  XBJ9KNQ117HM4X75EG6G
tests/fixtures/icechunk_virtual_accessible/snapshots/: 1CECHNKREP0F1RSTCMT0  80FX0M404MCT0R3665E0
tests/fixtures/icechunk_virtual_accessible/transactions/: 80FX0M404MCT0R3665E0
tests/fixtures/pyramid.zarr/0/: .zmetadata
tests/fixtures/pyramid.zarr/0/time/: .zattrs
tests/fixtures/pyramid.zarr/1/: .zmetadata
tests/fixtures/pyramid.zarr/2/: .zmetadata
tests/fixtures/responses/: icechunk_native_histogram.json  icechunk_native_tilejson.json  icechunk_virtual_accessible_histogram.json  icechunk_virtual_accessible_info.json  icechunk_virtual_accessible_tilejson.json  pyramid_zarr_histogram.json  pyramid_zarr_info.json  pyramid_zarr_tilejson.json  reference_json_tilejson.json  reference_tilejson.json  refernce_tilejson.json  test_CDD0_tilejson.json  test_zarr_store_info.json  test_zarr_store_zarr_info.json  test_zarr_store_zarr_tilejson.json  testfile_nc_histogram.json  testfile_nc_info.json  testfile_nc_tilejson.json  unconsolidated_zarr_histogram.json  unconsolidated_zarr_info.json  unconsolidated_zarr_tilejson.json  zarr_store_v2_zarr_info.json  zarr_store_v2_zarr_tilejson.json  zarr_store_v3_zarr_histogram.json  zarr_store_v3_zarr_info.json  zarr_store_v3_zarr_tilejson.json
tests/fixtures/test_zarr_store.zarr/: .zmetadata
tests/fixtures/test_zarr_store.zarr/FROST_DAYS/: .zarray
tests/fixtures/test_zarr_store.zarr/lon/: 0
tests/fixtures/test_zarr_store_v3.zarr/DISPH/: zarr.json
tests/fixtures/unconsolidated.zarr/lon/: 0
tests/fixtures/unconsolidated.zarr/var1/: 0.0.0  0.1.0  1.0.0  1.1.0
tests/fixtures/unconsolidated.zarr/var2/: 0.0.0  0.1.0  1.0.0  1.1.0
tests/fixtures/zarr_store_v2.zarr/: .zmetadata
tests/fixtures/zarr_store_v2.zarr/CDD0/: 0.0.0  0.0.1  0.0.2  0.0.3  0.0.4  0.0.5  0.0.6  0.0.7  0.1.0  0.1.1  0.1.2  0.1.3  0.1.4  0.1.5  0.1.6  0.1.7  0.2.0  0.2.1  0.2.2  0.2.3  0.2.4  0.2.5  0.2.6  0.2.7  0.3.0  0.3.1  0.3.2  0.3.3  0.3.4  0.3.5  0.3.6  0.3.7
tests/fixtures/zarr_store_v2.zarr/DISPH/: .zarray  0.0.0  0.0.1  0.0.2  0.0.3  0.0.4  0.0.5  0.0.6  0.0.7  0.1.0  0.1.1  0.1.2  0.1.3  0.1.4  0.1.5  0.1.6  0.1.7  0.2.0  0.2.1  0.2.2  0.2.3  0.2.4  0.2.5  0.2.6  0.2.7  0.3.0  0.3.1  0.3.2  0.3.3  0.3.4  0.3.5  0.3.6  0.3.7
tests/fixtures/zarr_store_v2.zarr/FROST_DAYS/: 0.0.0  0.0.1  0.0.2  0.0.3  0.0.4  0.0.5  0.0.6  0.0.7  0.1.0  0.1.1  0.1.2  0.1.3  0.1.4  0.1.5  0.1.6  0.1.7  0.2.0  0.2.1  0.2.2  0.2.3  0.2.4  0.2.5  0.2.6  0.2.7  0.3.0  0.3.1  0.3.2  0.3.3  0.3.4  0.3.5  0.3.6  0.3.7
tests/fixtures/zarr_store_v2.zarr/GWETPROF/: 0.0.0  0.0.1  0.0.2  0.0.3  0.0.4  0.0.5  0.0.6  0.0.7  0.1.0  0.1.1  0.1.2  0.1.3  0.1.4  0.1.5  0.1.6  0.1.7  0.2.0  0.2.1  0.2.2  0.2.3  0.2.4  0.2.5  0.2.6  0.2.7  0.3.0  0.3.1  0.3.2  0.3.3  0.3.4  0.3.5  0.3.6  0.3.7
tests/fixtures/zarr_store_v2.zarr/lat/: .zarray  0
tests/fixtures/zarr_store_v2.zarr/lon/: .zarray
tests/fixtures/zarr_store_v2.zarr/time/: .zarray
tests/fixtures/zarr_store_v3.zarr/FROST_DAYS/: zarr.json
tests/fixtures/zarr_store_v3.zarr/lat/: zarr.json
tests/fixtures/zarr_store_v3.zarr/lon/: zarr.json
tests/fixtures/zarr_store_v3.zarr/time/: zarr.json
titiler_xarray/: factory.py
(+144 files in other folders)
