[project]
name = "titiler-multidim"
description = "TiTiler application extension for titiler.xarray."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
license = {text = "MIT"}
keywords = [
    "TiTiler",
    "zarr",
    "xarray",
    "Fastapi",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "titiler.core>=0.23.0,<0.24",
    "titiler.xarray>=0.23.0,<0.24",
    "aiohttp",
    "aiobotocore>=2.24.0",
    "boto3>=1.39.0",
    "cftime",
    "fastapi",
    "fsspec",
    "h5netcdf",
    "numpy",
    "pydantic-settings~=2.0",
    "pydantic>=2.4,<3.0",
    "redis",
    "requests",
    "rioxarray",
    "s3fs",
    "xarray",
    "zarr>=2,<3",
]

[project.optional-dependencies]
server = [
    "uvicorn"
]
lambda = [
    "mangum==0.19.0",
    "aiobotocore>=2.24.0,<2.24.2"
]

[dependency-groups]
dev = [
    "fakeredis>=2.23.5",
    "httpx",
    "ipykernel>=6.30.1",
    "ipython>=8.12.3",
    "netcdf4>=1.7.2",
    "pre-commit>=3.5.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
    "uvicorn>=0.34.0",
    "yappi>=1.6.0",
]
deployment = [
    "aws-cdk-lib~=2.177.0",
    "constructs>=10.4.2",
    "pydantic-settings~=2.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/developmentseed/titiler-xarray"
Issues = "https://github.com/developmentseed/titiler-xarray/issues"
Source = "https://github.com/developmentseed/titiler-xarray"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["titiler"]
default_section = "THIRDPARTY"

[tool.ruff]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]

[tool.ruff.per-file-ignores]
"tests/test_app.py" = ["D1"]
"tests/fixtures/generate_test_zarr.py" = ["D1"]
"tests/fixtures/generate_test_reference.py" = ["D1"]

[tool.mypy]
no_implicit_optional = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm.version]
source = "file"
path = "src/titiler/multidim/__init__.py"


[tool.pdm]
package-dir = "src/"

[tool.pdm.build]
includes = ["src/titiler/multidim/"]
excludes = ["tests/", "**/.mypy_cache", "**/.DS_Store"]

[tool.pytest.ini_options]
addopts = "--cov=titiler.multidim --cov-report term-missing -s -vv"
